<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DroidRec</string>
    <string name="channel_name">My App Notifications</string>
    <string name="channel_description">Notifications related to my app</string>
    <string name="record_start">Start recording</string>
    <string name="record_stop">Stop recording</string>
    <string name="record_pause">Pause recording</string>
    <string name="record_resume">Continue recording</string>
    <string name="record_open">Open recording</string>
    <string name="record_share">Share recording</string>
    <string name="record_delete">Delete recording</string>
    <string name="settings_title">Settings</string>
    <string name="option_activated">Activated</string>
    <string name="option_deactivated">Deactivated</string>
    <string name="info_title">About DroidRec</string>
    <string name="info_version">Version</string>
    <string name="info_sources">Source code</string>
    <string name="info_license">Read license</string>
    <string name="info_contributors">Contributors</string>
    <string name="capture_settings">Capture settings</string>
    <string name="quality_indicator_custom">Custom recording quality</string>
    <string name="quality_indicator_custom_description">Ignore automatic quality settings</string>
    <string name="quality_indicator">Recording quality</string>
    <string name="quality_indicator_description">Set quality</string>
    <string name="quality_normal">Normal</string>
    <string name="quality_low">Low</string>
    <string name="quality_lowest">Lowest</string>
    <string name="fps_indicator_custom">Custom FPS</string>
    <string name="fps_indicator_custom_description">Ignore automatic FPS settings</string>
    <string name="fps_indicator">Recording FPS</string>
    <string name="fps_indicator_description">Set custom frames per second</string>
    <string name="bitrate_indicator_custom">Custom bitrate</string>
    <string name="bitrate_indicator_custom_description">Ignore automatic bitrate settings</string>
    <string name="bitrate_indicator">Recording bitrate</string>
    <string name="bitrate_indicator_description">Set custom bitrate</string>
    <string name="audio_sources_list">Select input audio sources</string>
    <string name="audio_source_media">Media audio source</string>
    <string name="audio_source_game">Game audio source</string>
    <string name="audio_source_unknown">Unknown audio source</string>
    <string name="resolution_option">Choose custom video resolution</string>
    <string name="resolution_option_description">Set custom video resolution</string>
    <string name="resolution_option_auto">Native</string>
    <string name="codec_option">Choose custom video codec</string>
    <string name="codec_option_description">Set custom video codec</string>
    <string name="codec_option_auto">Default</string>
    <string name="audio_codec_option">Choose custom audio codec</string>
    <string name="audio_codec_option_description">Set custom audio codec</string>
    <string name="audio_codec_option_auto">Default</string>
    <string name="samplerate_indicator_custom">Custom audio sample rate</string>
    <string name="samplerate_indicator_custom_description">Ignore default sample rate</string>
    <string name="samplerate_indicator">Audio sample rate</string>
    <string name="samplerate_indicator_description">Set custom audio sample rate</string>
    <string name="audio_channels">Audio channels</string>
    <string name="audio_channels_description">Set audio channels</string>
    <array name="audio_channels_preferences">
        <item name="audio_channels_preferences_option_mono">Mono</item>
        <item name="audio_channels_preferences_option_stereo">Stereo</item>
    </array>
    <string name="dontnotifyonfinish_option">Don\'t notify on finish</string>
    <string name="dontnotifyonfinish_option_description">Don\'t get notified that recording just finished</string>
    <string name="dontnotifyonrotate_option">Don\'t notify on rotate</string>
    <string name="dontnotifyonrotate_option_description">Don\'t notify on new recording start when screen rotates</string>
    <string name="minimizeonstart_option">Minimize on start</string>
    <string name="minimizeonstart_option_description">Minimize the app when a new recording starts</string>
    <string name="norotate_option">Don\'t restart recording on rotate</string>
    <string name="norotate_option_description">WARNING: If enabled, your video will lose quality after rotation!</string>
    <string name="controls_settings">Controls settings</string>
    <string name="floating_controls_option">Enable floating controls</string>
    <string name="floating_controls_option_description">Show floating controls panel</string>
    <string name="floating_controls_position">Floating controls position</string>
    <string name="floating_controls_position_description">Set floating controls position</string>
    <string name="floating_controls_position_notice">Tap the screen when complete</string>
    <string name="floating_controls_size">Floating controls size</string>
    <string name="floating_controls_size_description">Set floating controls size</string>
    <array name="floating_controls_size_preferences">
        <item name="floating_controls_size_option_large">Large</item>
        <item name="floating_controls_size_option_normal">Normal</item>
        <item name="floating_controls_size_option_small">Small</item>
        <item name="floating_controls_size_option_tiny">Tiny</item>
    </array>
    <string name="floating_controls_opacity">Floating controls opacity</string>
    <string name="floating_controls_opacity_description">Set floating controls opacity</string>
    <string name="floating_controls_description_handle">Floating controls handle</string>
    <string name="dark_theme_option">Theme</string>
    <string name="dark_theme_option_description">Set theme preferences</string>
    <array name="dark_theme_option_preferences">
        <item name="dark_theme_option_dark">Dark</item>
        <item name="dark_theme_option_light">Light</item>
        <item name="dark_theme_option_auto_item">Automatic</item>
    </array>
    <string name="on_shake_option_summary">Action on device shake</string>
    <string name="on_shake_option_title">On shake</string>
    <string name="on_shake_dialog">On shake dialog</string>
    <array name="on_shake_option_preferences">
        <item name="on_shake_option_nothing">Do nothing</item>
        <item name="on_shake_option_pause">Pause</item>
        <item name="on_shake_option_stop">Stop</item>
    </array>
    <string name="dark_theme_change_notice">Reopen the application to apply theme</string>
    <string name="overlay_notice_title">Display over other apps</string>
    <string name="overlay_notice_description">To show floating controls, enable Drawing over other apps permission</string>
    <string name="overlay_notice_button">Open settings</string>
    <string name="recording_tile">Record screen</string>
    <string name="recording_started_title">Recording screen</string>
    <string name="recording_started_text">Screen recording in process</string>
    <string name="recording_audio_started_title">Recording audio</string>
    <string name="recording_audio_started_text">Audio recording in process</string>
    <string name="recording_paused_title">Recording paused</string>
    <string name="recording_paused_text">Screen recording paused</string>
    <string name="recording_audio_paused_title">Recording audio paused</string>
    <string name="recording_audio_paused_text">Audio recording paused</string>
    <string name="recording_finished_title">Recording finished</string>
    <string name="recording_finished_text">Screen recording complete</string>
    <string name="recording_audio_finished_title">Recording audio finished</string>
    <string name="recording_audio_finished_text">Audio recording complete</string>
    <string name="recording_rotated_title">Screen rotated</string>
    <string name="recording_rotated_text">New recording started</string>
    <string name="audio_playback_unavailable">Audio Playback recording requires Android 10 or later</string>
    <string name="notifications_channel">Recording notifications</string>
    <string name="notifications_stop">Stop</string>
    <string name="notifications_pause">Pause</string>
    <string name="notifications_resume">Continue</string>
    <string name="notifications_share">Share</string>
    <string name="notifications_delete">Delete</string>
    <string name="error_storage_required">Error: Storage permission required</string>
    <string name="error_storage_select_folder">Error: Select recordings folder</string>
    <string name="error_audio_required">Error: Allow recording audio</string>
    <string name="error_invalid_folder">Error: Invalid recordings folder</string>
    <string name="error_recorder_failed">Error: Recording failed</string>
    <string name="error_recorder_codec_error">Error: Codec error</string>
    <string name="error_playback_not_allowed">Error: Audio Playback recording not allowed</string>
    <string name="setting_video_recordings_folder">Video recordings folder</string>
    <string name="setting_audio_recordings_folder">Audio recordings folder</string>
    <string name="setting_record_screen">Record screen</string>
    <string name="setting_record_type_video">Video</string>
    <string name="setting_record_type_audio">Audio only</string>
    <string name="setting_audio_record_microphone_sound">Record microphone</string>
    <string name="setting_audio_record_playback_sound">Record audio</string>
</resources>
